# tensor-compiler

./: .gitignore  CMakeLists.txt  readme.md  requirements.txt
.github/workflows/: ci.yaml
docs/: inference.md  onnx.md  operations.md
end2end/: gen.py  pytorch_reference.py
include/: cgraph.hpp  cli.hpp  compiler.hpp  factory.hpp  graph.hpp  io.hpp  node.hpp  operations.hpp  tensor.hpp  tensor_node.hpp
include/kernels/: conv.hpp  matmul.hpp  runners.hpp
include/mlir/: builder.hpp  cgraph.hpp  factory.hpp
include/mlir_ext/: builder.hpp  compiler.hpp  factory.hpp  graph.hpp
include/nodes/: node.hpp  operations.hpp  tensor_node.hpp  types.hpp
include/tensor/: dtype.hpp  tensor.hpp
include/viz/: cg_draw.hpp  drawable.hpp
kernels/: .gitignore  CMakeLists.txt  plot_benchmark.py  readme.md
kernels/src/: benchmark.cpp  conv.cpp  matmul.cpp  runners.cpp
kernels/tests/: CMakeLists.txt  kernels_tests.cpp
models/: model.onnx
src/: driver.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
